--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<div class="jumbotron jumbotron-fluid animated fadeIn fast">
+    <div class="container">
+      <h1 class="display-4">About</h1>
+      <p class="lead animated fadeIn">
+        This is a Application of Comics.</p>
+    </div>
+</div>
