--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -12,12 +12,16 @@
             </a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['home']">Home</a>
         </li>
         
-        <li class="nav-item">
-          <a class="nav-link" href="#">Heroes</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['about']">About</a>
+        </li>
+
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['heroes']">Heroes</a>
         </li>
       </ul>
 
