--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -3,14 +3,15 @@
 <hr>
 
 <div class="card-columns">
-    <div class="card">
-        <img src="assets/images/aquaman.png" class="card-img-top" alt="Aquaman">
+    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes">
+        <img [src]="heroe.picture" class="card-img-top" alt="{{ heroe.name }}">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title">{{ heroe.name }}</h5>
+          <p class="card-text">{{ heroe.bio }}</p>
+          <p class="card-text"><small class="text-muted">{{ heroe.home }} - {{ heroe.aparicion }}</small></p>
 
-         <button type="button" class="btn btn-outline-primary btn-block">Ver más</button>
+         <!-- <button type="button" class="btn btn-outline-primary btn-block">Ver más</button> -->
+         <a href="#" class="btn btn-outline-primary btn-block">Ver más...</a>
         </div>
     </div>
 </div>
