--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,6 +2,6 @@
     <div class="container">
       <h1 class="display-4">About</h1>
       <p class="lead animated fadeIn">
-        This is a Application of Comics.</p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis doloremque corporis minus animi rerum cumque quae voluptatem non laborum quis. Earum quasi amet rerum ratione modi recusandae voluptatibus sint quae.</p>
     </div>
 </div>
