--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,13 +1,19 @@
-<div class="card-columns">
-    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
-        <img class="card-img-top" [src]="heroe.picture" alt="{{ heroe.name }}">
-        <div class="card-body">
-          <h5 class="card-title">{{ heroe.name }}</h5>
-          <p class="card-text">{{ heroe.bio }}</p>
-          <p class="card-text"><small class="text-muted">{{ heroe.home }} - {{ heroe.aparicion }}</small></p>
 
-        <button type="button" class="btn btn-outline-primary btn-block" (click)="verHeroe(i)">Ver más</button>
-        <!-- <a href="#" class="btn btn-outline-primary btn-block">Ver más...</a> -->
-        </div>
-    </div>
+<h1>Héroes</h1>
+<hr>
+
+<div class="row">
+  <div class="card-columns">
+      <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
+          <img class="card-img-top" [src]="heroe.picture" alt="{{ heroe.name }}">
+          <div class="card-body">
+            <h5 class="card-title">{{ heroe.name }}</h5>
+            <p class="card-text">{{ heroe.bio }}</p>
+            <p class="card-text"><small class="text-muted">{{ heroe.home }} - {{ heroe.aparicion }}</small></p>
+
+          <button type="button" class="btn btn-outline-primary btn-block" (click)="verHeroe(i)">Ver más</button>
+          <!-- <a href="#" class="btn btn-outline-primary btn-block">Ver más...</a> -->
+          </div>
+      </div>
+  </div>
 </div>
