--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -26,8 +26,8 @@
       </ul>
 
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Buscar por..." aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        <input type="search" class="form-control mr-sm-2" placeholder="Buscar héroe" (keyup.enter)="searchHeroe(heroe.value)" #heroe>
+        <button type="button" class="btn btn-outline-success my-2 my-sm-0" (click)="searchHeroe(heroe.value)">Buscar</button>
       </form>
     </div>
 </nav>
