--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -13,15 +13,15 @@
         </li>
 
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['home']">Home</a>
+          <a class="nav-link" [routerLink]="['home']">Inicio</a>
         </li>
         
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['about']">About</a>
+          <a class="nav-link" [routerLink]="['about']">Acerca</a>
         </li>
 
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['heroes']">Heroes</a>
+          <a class="nav-link" [routerLink]="['heroes']">Héroes</a>
         </li>
       </ul>
 
