--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -3,6 +3,6 @@
 
 <div class="row">
   <div class="card-columns">
-      <app-heroecard [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i = index"></app-heroecard>
+      <app-heroecard (heroeSeleccionado)="verHeroe($event)" [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i = index"></app-heroecard>
   </div>
 </div>
