--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -23,6 +23,10 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['heroes']">Héroes</a>
         </li>
+
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['pipes']">Pipes</a>
+        </li>
       </ul>
 
       <form class="form-inline my-2 my-lg-0">
